--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,10 @@ nav ul {
 }
 
 .header-text {
-	margin-top: 300px;
-	font-size: 30px;
+	font-size: 26px;
+	position: absolute;
+	top: 40%;
+	z-index: 1;
 }
 
 .header-text h1 {
@@ -551,6 +553,7 @@ form .btn2 {
 		width: 100%;
 		background-color: rgba(0, 0, 0, 0.8);
 		transition: all 0.2s;
+		z-index: 2;
 	}
 }
 
@@ -589,15 +592,16 @@ form .btn2 {
 
 .menu__link:hover {
 }
+@media (max-width: 897px){
+	.header-text h1{
+	font-size: 36px;
+}
+}
 @media (max-width: 820px) {
-	.header-text {
-		margin-top: 220px;
-		font-size: 20px;
-	}
 
 	.header-text h1 {
 		margin-top: 20px;
-		font-size: 30px;
+		
 	}
 }
 
@@ -640,10 +644,6 @@ form .btn2 {
 		background-image: url(../images/phone-background.png);
 	}
 
-	.header-text {
-		margin-top: 220px;
-		font-size: 18px;
-	}
 
 	.header-text h1 {
 		margin-top: 20px;
@@ -667,15 +667,6 @@ form .btn2 {
 }
 
 @media (max-width: 480px) {
-	.header-text {
-		margin-top: 110px;
-		font-size: 20px;
-	}
-
-	.header-text h1 {
-		margin-top: 20px;
-		font-size: 18px;
-	}
 	.copyright {
 		font-size: 12px;
 	}
